01_basic_objects/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-example
  labels:
    name: workshop-app-example
    instance: workshop-example
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: workshop-app-example
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-example-headless
  labels:
    app: workshop-app-example
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: workshop-app-example
